# lambchop

./: .gitignore  CMakeLists.txt  hogehoge
src/: CMakeLists.txt  file.c  lambchop.h  logger.c  mach_syscalls.h  macho.c  main.c  syscall.S  syscall.s  trace.c  unix_syscalls.h  vm.c  vmgen
src/mach-o/: dump.c  load.c
